# point_cloud_segmentation-1

.github/workflows/: main.yml
pcs_detection/: CMakeLists.txt
pcs_detection/cmake/Modules/: CodeCoverage.cmake
pcs_detection/scripts/data/weights/: weld_data5_laplacian_config.json
pcs_detection/scripts/data/weights/using_negatives_fcn8_GREY_19_10_10_101037/: inference_config.json
pcs_detection/src_python/pcs_detection/: inference.py
pcs_detection/src_python/pcs_detection/models/: histogram_backprojection.py
pcs_ros/: CMakeLists.txt
pcs_ros/src/: fcn8_node  histogram_backprojection_node
pcs_ros/src/utility_nodes/: point_cloud_edge_trim_node.cpp
pcs_scan_integration/: CMakeLists.txt
pcs_scan_integration/include/pcs_scan_integration/: octomap_mesh_masking.h
pcs_scan_integration/src/pcs_scan_integration/: octomap_mesh_masking.cpp
pcs_scan_integration/test/: octomap_mesh_masking_unit.cpp
